# advancing-front-method_2D

./: Makefile  Makefile.am  Makefile.in  README.md  config.h  config.h.in  config.status  configure  configure.ac
matlab version/: LButtonFcn.m  MVs.mat  afce.m  afmSearch.m  afront.m  isLeftSide.m  mafce.m  mafront.m  triSmooth.m
src/: Advancing-Front-Method_2D.cpp  Advancing-Front-Method_2D.cpp~  MAFM.hpp~  VET.hpp  VET.hpp~  check_VE.cpp  check_VE.cpp~  create_tri.cpp  create_tri.cpp~  format_off.cpp  format_off.cpp~  interpolation.cpp  interpolation.cpp~  matlab_fun.cpp  matlab_fun.cpp~  matlab_fun.hpp  matlab_fun.hpp~  smooth_tri.cpp  smooth_tri.cpp~
test/: out.off  test.off
