AUTOMAKE_OPTIONS=foreign
bin_PROGRAMS=Advancing_Front_Method_2D
Advancing_Front_Method_2D_CPPFLAGS=-std=c++11
Advancing_Front_Method_2D_SOURCES=src/Advancing-Front-Method_2D.cpp src/MAFM.hpp src/matlab_fun.cpp src/matlab_fun.hpp src/format_off.cpp src/VET.hpp src/check_VE.cpp src/interpolation.cpp src/create_tri.cpp src/smooth_tri.cpp
