#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([Advancing-Front-Method_2D], [1.0], [guangmuzhu@gmail.com])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([src/matlab_fun.cpp])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
${CXXFLAGS="-g0 -O3"}
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL

# Checks for library functions.
AC_CHECK_FUNCS([pow sqrt])

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
